force-app/main/default/objects/ClubandBoardRecords__c/ClubandBoardRecords__c.object-meta.xml
<CustomObject>
    <label>Club and Board Records</label>
    <nameField>
        <label>Club and Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club and Board Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>