force-app/main/default/objects/ClubandBoardRecords__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <inlineHelpText>Enter any additional information or comments that will be helpful regarding this Club</inlineHelpText>
    <label>Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>