force-app/main/default/objects/ClubandBoardRecords__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What type of organization is the person member to ?</description>
    <inlineHelpText>What type of Club it is? Select one from the Picklist</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Non-Profit or Social Organization</fullName>
            </value>
            <value>
                <fullName>Private Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>